# frankapy

./: .gitignore  pyproject.toml
bash_scripts/: start_control_pc.sh  start_franka_ft_on_control_pc.sh  start_franka_gripper_on_control_pc.sh  start_franka_ros_interface_on_control_pc.sh
cfg/: saumya_april_tag_cfg.yaml
examples/: dynamic_pick_object_camera.py  dynamic_pick_object_camera_min_jerk.py  dynamic_pick_object_fixed_object.py  get_ft_data.py  pickup_starting_position.tf  run_swing_task.py  shapes.py
frankapy/: franka_arm.py
scripts/: process_data_0.py  process_data_1.py
