[project]
authors = [{name = "Lev Kozlov", email = "kozlov.l.a10@gmail.com"}]
name = "frankapy"
requires-python = ">= 3.9"
version = "0.1.0"
dependencies = ["numpy", "matplotlib", "autolab-core>=1.1.1,<2", "numpy-quaternion>=2023.0.4,<2024", "empy", "catkin-tools>=0.9.5,<0.10"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge", "robostack-staging"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
frankapy = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
ros-noetic-desktop = "*"
ros-noetic-libfranka = "*"
protobuf = ">=4.21.12,<5"
ros-noetic-franka-ros = "*"
pinocchio = ">=2.6.20,<3"
cxx-compiler = ">=1.9.0,<2"
cmake = "<4.0.0"
pkg-config = ">=0.29.2,<0.30"
numba = ">=0.59.1,<0.60"
cuda-nvcc = ">=12"
cuda-nvrtc = ">=12"

[tool.pixi.activation]
scripts = ["catkin_ws/devel/setup.sh"]
